revert java 21 language syntax sugar