@@ -57,7 +57,7 @@ class MessageAuthSupportTest {
         // impl under test
         AccessRequestNoAuth encodedRequest = (AccessRequestNoAuth) RadiusRequest.create(dictionary, ACCESS_REQUEST, (byte) 1, null, Collections.emptyList())
                 .encodeRequest(secret);
-        byte[] actualMsgAuth = encodedRequest.getAttributes().getFirst().getValue();
+        byte[] actualMsgAuth = encodedRequest.getAttributes().get(0).getValue();
 
         // jradius impl
         net.jradius.packet.AccessRequest jradiusRequest = new net.jradius.packet.AccessRequest();
